<resources>
    <string name="app_name">InventoryApp</string>
    <string name="add_a_product">Add a new product</string>
    <string name="edit_product">Edit a product</string>
    <string name="delete_product">Are you sure you want to delete everything?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure you want to leave without saving the product?</string>
    <string name="save">Save</string>
    <string name="delete_all_products">Delete all products</string>
    <string name="delete">Delete</string>
    <string name="sale">Sale</string>
    <string name="picture_of_the_product">Picture of the product</string>
    <string name="just_a_funny_dog">Just a funny dog</string>
    <string name="amm_this_purple_button">Amm.. this purple button</string>
    <string name="must_be_very_important"> must be very important...</string>
    <string name="wanna_be_floating_action_button">Wanna be Floating Action Button</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="product">Product</string>
    <string name="product_name_editText">product name</string>
    <string name="Quantity">Quantity</string>
    <string name="quantity">quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Price">Price</string>
    <string name="price">price</string>
    <string name="dollar">$</string>
    <string name="order">order more</string>
    <string name="text_mail">Hi! I want to order my favorite product : </string>
    <string name="mail_subject">order</string>
    <string name="invalid_quantity_toast">Invalid quantity</string>
    <string name="product_is_not_updated_toast">The product is not updated</string>
    <string name="please_insert_product_name">Please insert product name</string>
    <string name="please_insert_product_quantity">Please insert product quantity</string>
    <string name="please_insert_product_price">Please insert product price</string>
    <string name="can_t_save_the_product">Can\'t save the product</string>
    <string name="successfully_saved_the_product">Successfully saved the product</string>
    <string name="failed_to_update">Failed to update</string>
    <string name="product_updated">Product updated</string>
    <string name="error_with_deleting_product">Error with deleting product</string>
    <string name="product_deleted">Product deleted</string>
    <string name="delete_this_product">Delete this product?</string>
    <string name="don_t_forget">Don\'t forget to take a picture of the product</string>
    <string name="mail_address">supplier_mail@gmail.com</string>
    <string name="no_instances_for_you">No instances for you</string>
    <string name="you_need_to_insert_all_the_information_to_continue">You need to insert all the information to continue</string>

</resources>
